<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_subjects_list">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="de.atalantus.wokabel.views.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_subjects_list"
        android:name="de.atalantus.wokabel.views.fragments.SubjectsListFragment"
        android:label="@string/title_subjects_list"
        tools:layout="@layout/fragment_subjects_list" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="de.atalantus.wokabel.views.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>